// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfoLines /> should match its empty snapshot 1`] = `
<dl
  className="sc-bdVaJa kbuifU k-Infolines"
  style={
    Object {
      "--InfoLines-borderColor": "#d8d8d8",
    }
  }
>
  <div
    className="k-InfoLines__line"
  >
    <dt
      className="k-InfoLines__key"
    >
      Lorem
    </dt>
    <dd
      className="k-InfoLines__value"
    >
      Ipsum
    </dd>
  </div>
  <div
    className="k-InfoLines__line"
  >
    <dt
      className="k-InfoLines__key"
    >
      Dolor
    </dt>
    <dd
      className="k-InfoLines__value"
    >
      Sit amet
    </dd>
  </div>
</dl>
`;

exports[`<InfoLines /> should match its propped snapshot 1`] = `
<div
  className="sc-bdVaJa kbuifU k-Infolines k-InfoLines--withBorderRadius k-InfoLines--withLeftRightBorder k-InfoLines--withoutTopBottomBorder k-InfoLines--withoutResponsive"
  style={
    Object {
      "--InfoLines-borderColor": "#f8f",
    }
  }
>
  <div
    className="k-InfoLines__line"
  >
    <span
      className="k-InfoLines__key"
    >
      Lorem
    </span>
    <span
      className="k-InfoLines__value"
    >
      Ipsum
    </span>
  </div>
  <div
    className="k-InfoLines__line"
  >
    <span
      className="k-InfoLines__key"
    >
      Dolor
    </span>
    <span
      className="k-InfoLines__value"
    >
      Sit amet
    </span>
  </div>
</div>
`;
